--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
- <html>
-     <head>
-        <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-     </head>
+<html>
+  <head>
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js'></script>
+  </head>
+  <body>
+    <h1>My React App</h1>
+    <div id='root'></div>
+    <script type='text/babel'>
 
-     <body>
-        <hr/>
-        <h1> it works</h1>
-        
-        <script type = 'text/babel'>
-
-        </script>
-    </body>
- </html>
+      ReactDOM.render(<hr />, document.querySelector('#root'));
+    </script>
+  </body>
+</html>
